--- a/src/assets/styles/scss/03-components/_question.scss
+++ b/src/assets/styles/scss/03-components/_question.scss
@@ -69,7 +69,7 @@
 
         @media (prefers-color-scheme: dark) {
           border-color: $white-color;
-          box-shadow: 0 0 0 0.5rem rgba(255, 255, 255, 0.3);
+          box-shadow: 0 0 0 0.5rem rgba(255, 255, 255, 0.4);
         }
       }
     }
